# lib-doc-crawler

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
output/: crawled_content.md
src/: crawler.py
