[tool.poetry]
name = "Library Documentation Crawler"
version = "0.1.0"
description = "Python"
authors = ["Kazuma Inoue"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"
trafilatura = "^1.6.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
